--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- Saelian:0 "Saelian"
+ saelian:0 "Saelian"
  CRUSADE_SAELIAN:0 "Sanctum Bellum"
  sigilian:0 "Sigilian"
  eneratian:0 "Eneratian"
