--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -487,7 +487,7 @@
  PROV486:0 ""
  PROV487:0 ""
  PROV488:0 ""
- PROV489:0 ""
+ PROV489:0 "Nekody"
  PROV490:0 ""
  PROV491:0 "Dreckburg"
  PROV492:0 "Newygrod"
@@ -622,7 +622,7 @@
  PROV621:0 "Teidengen"
  PROV622:0 "Ruhigwald"
  PROV623:0 "Grobhalde"
- PROV624:0 "Äter"
+ PROV624:0 "Gyrdian Coast"
  PROV625:0 "Vizäm"
  PROV626:0 "Diechtung"
  PROV627:0 "Kupfthal"
@@ -693,7 +693,7 @@
  PROV692:0 "Konierz"
  PROV693:0 "Rzowienie"
  PROV694:0 "Winierz"
- PROV695:0 "Dzirż"
+ PROV695:0 "Dzirz"
  PROV696:0 ""
  PROV697:0 ""
  PROV698:0 "Aufentin"
@@ -701,31 +701,31 @@
  PROV700:0 "Redingen"
  PROV701:0 "Sendiegen"
  PROV702:0 ""
- PROV703:0 ""
- PROV704:0 ""
- PROV705:0 ""
+ PROV703:0 "Topochy"
+ PROV704:0 "Coast of Algharbiya"
+ PROV705:0 "Sepretola"
  PROV706:0 "Mrawa"
- PROV707:0 ""
- PROV708:0 ""
- PROV709:0 ""
- PROV710:0 ""
- PROV711:0 ""
- PROV712:0 ""
- PROV713:0 ""
- PROV714:0 ""
- PROV715:0 ""
- PROV716:0 ""
- PROV717:0 ""
- PROV718:0 ""
- PROV719:0 ""
+ PROV707:0 "Lebyeni"
+ PROV708:0 "Wyrmegnacian Sea"
+ PROV709:0 "Bilohora"
+ PROV710:0 "Southern Adasmerragadde Coast"
+ PROV711:0 "Nekody"
+ PROV712:0 "Stechoven"
+ PROV713:0 "Novybrezi"
+ PROV714:0 "Chalov"
+ PROV715:0 "Stod"
+ PROV716:0 "Chovale"
+ PROV717:0 "Stovalka"
+ PROV718:0 "Teprovod"
+ PROV719:0 "Doniepr"
  PROV720:0 "Gornydon"
- PROV721:0 ""
+ PROV721:0 "Zazie"
  PROV722:0 "Jirem"
- PROV723:0 ""
- PROV724:0 ""
- PROV725:0 ""
- PROV726:0 ""
- PROV727:0 ""
+ PROV723:0 "Mechlin"
+ PROV724:0 "Dzipo"
+ PROV725:0 "Ostance"
+ PROV726:0 "Togawy"
+ PROV727:0 "Dorchean Canal"
  PROV728:0 ""
  PROV729:0 ""
  PROV730:0 ""
@@ -745,7 +745,7 @@
  PROV744:0 ""
  PROV745:0 ""
  PROV746:0 ""
- PROV747:0 ""
+ PROV747:0 "Northern Adasmerragadde Coast"
  PROV748:0 ""
  PROV749:0 ""
  PROV750:0 ""
@@ -767,114 +767,114 @@
  PROV766:0 ""
  PROV767:0 ""
  PROV768:0 ""
- PROV769:0 "Curitiba"
- PROV770:0 "Braslaw"
- PROV771:0 "Vitebsk"
- PROV772:0 "Uruguay"
- PROV773:0 "Banda Oriental"
- PROV774:0 "Al-Junaynah"
- PROV775:0 "Asuncion"
- PROV776:0 "Concepcion"
- PROV777:0 "Corrientes"
- PROV778:0 "Rio de la Plata"
- PROV779:0 "Tandil"
- PROV780:0 "Candelaria"
- PROV781:0 "Puerto Deseado"
- PROV782:0 "Tierra del Fuego"
- PROV783:0 "Kawesqar"
- PROV784:0 "Huillimapu"
- PROV785:0 "Pehuenmapu"
- PROV786:0 "Carmen"
- PROV787:0 "Picunmapu"
- PROV788:0 "Angoche"
- PROV789:0 "Mtetwa"
- PROV790:0 "Chaco Austral"
- PROV791:0 "Catamarca"
- PROV792:0 "Copiapo"
- PROV793:0 "Iquique"
- PROV794:0 "Jujuy"
- PROV795:0 "Potosi"
- PROV796:0 "Arica"
- PROV797:0 "Oruro"
- PROV798:0 "Mbwila"
- PROV799:0 "Chaco Boreal"
- PROV800:0 "Chiquitos"
- PROV801:0 "Cochabamba"
- PROV802:0 "Chuquiabo"
- PROV803:0 "Moxos"
- PROV804:0 "Puno"
- PROV805:0 "Arequipa"
- PROV806:0 "Nazca"
- PROV807:0 "Abancay"
- PROV808:0 "Cuzco"
- PROV809:0 "Lima"
- PROV810:0 "Huancavelica"
- PROV811:0 "Jauja"
- PROV812:0 "Chanchan"
- PROV813:0 "Cajamarca"
- PROV814:0 "Huanuco"
- PROV815:0 "Iquitos"
- PROV816:0 "Tumbes"
- PROV817:0 "Canari"
- PROV818:0 "Canelos"
- PROV819:0 "Guayaquil"
- PROV820:0 "Quito"
- PROV821:0 "Quijos"
- PROV822:0 "Caqueta"
- PROV823:0 "Cauca"
- PROV824:0 "Mariquita"
- PROV825:0 "Bogota"
- PROV826:0 "Choco"
- PROV827:0 "Antioquía"
- PROV828:0 "Cartagena"
- PROV829:0 "Magdalena"
- PROV830:0 "Maracaibo"
- PROV831:0 "Caracas"
- PROV832:0 "Tunja"
- PROV833:0 "Algoa Bay"
- PROV834:0 "Barinas"
- PROV835:0 "Panama"
- PROV836:0 "Chorotega"
- PROV837:0 "Nicaragua"
- PROV838:0 "Mosquito"
- PROV839:0 "Pipil"
- PROV840:0 "Honduras"
- PROV841:0 "Guatemala"
- PROV842:0 "Petén"
- PROV843:0 "Belize"
- PROV844:0 "Zapotec"
- PROV845:0 "Campeche"
- PROV846:0 "Sotuta"
- PROV847:0 "Mixtec"
- PROV848:0 "Tohancapan"
- PROV849:0 "Tlapanec"
- PROV850:0 "Tlaxcala"
- PROV851:0 "Zacatula"
- PROV852:0 "Mexico"
- PROV853:0 "Tlapacoyan"
- PROV854:0 "Sayultecas"
- PROV855:0 "Totorames"
- PROV856:0 "Zacatecas"
- PROV857:0 "Guachichil"
- PROV858:0 "Tamaulipas"
- PROV859:0 "Sinaloa"
- PROV860:0 "Tepehuan"
- PROV861:0 "Coahuila"
- PROV862:0 "Yaqui"
- PROV863:0 "Suma"
- PROV864:0 "Concho"
- PROV865:0 "Cochimi"
- PROV866:0 "Guaycura"
- PROV867:0 "Cahuilla"
- PROV868:0 "Chumash"
- PROV869:0 "T'epot'aha'l"
- PROV870:0 "Lakisamni"
- PROV871:0 "Pomo"
- PROV872:0 "Shayuusht'la"
- PROV873:0 "Tsinuk"
- PROV874:0 "Duwamish"
- PROV875:0 "Tachii'nii"
- PROV876:0 "Yavapé"
+ PROV769:0 ""
+ PROV770:0 ""
+ PROV771:0 ""
+ PROV772:0 ""
+ PROV773:0 ""
+ PROV774:0 ""
+ PROV775:0 ""
+ PROV776:0 ""
+ PROV777:0 ""
+ PROV778:0 ""
+ PROV779:0 ""
+ PROV780:0 ""
+ PROV781:0 ""
+ PROV782:0 ""
+ PROV783:0 ""
+ PROV784:0 ""
+ PROV785:0 ""
+ PROV786:0 ""
+ PROV787:0 ""
+ PROV788:0 ""
+ PROV789:0 ""
+ PROV790:0 ""
+ PROV791:0 ""
+ PROV792:0 ""
+ PROV793:0 ""
+ PROV794:0 ""
+ PROV795:0 ""
+ PROV796:0 ""
+ PROV797:0 ""
+ PROV798:0 ""
+ PROV799:0 ""
+ PROV800:0 ""
+ PROV801:0 ""
+ PROV802:0 ""
+ PROV803:0 ""
+ PROV804:0 ""
+ PROV805:0 ""
+ PROV806:0 ""
+ PROV807:0 ""
+ PROV808:0 ""
+ PROV809:0 ""
+ PROV810:0 ""
+ PROV811:0 ""
+ PROV812:0 ""
+ PROV813:0 ""
+ PROV814:0 ""
+ PROV815:0 ""
+ PROV816:0 ""
+ PROV817:0 ""
+ PROV818:0 ""
+ PROV819:0 ""
+ PROV820:0 ""
+ PROV821:0 ""
+ PROV822:0 ""
+ PROV823:0 ""
+ PROV824:0 ""
+ PROV825:0 ""
+ PROV826:0 ""
+ PROV827:0 ""
+ PROV828:0 ""
+ PROV829:0 ""
+ PROV830:0 ""
+ PROV831:0 ""
+ PROV832:0 ""
+ PROV833:0 ""
+ PROV834:0 ""
+ PROV835:0 ""
+ PROV836:0 ""
+ PROV837:0 ""
+ PROV838:0 ""
+ PROV839:0 ""
+ PROV840:0 ""
+ PROV841:0 ""
+ PROV842:0 ""
+ PROV843:0 ""
+ PROV844:0 ""
+ PROV845:0 ""
+ PROV846:0 ""
+ PROV847:0 ""
+ PROV848:0 ""
+ PROV849:0 ""
+ PROV850:0 ""
+ PROV851:0 ""
+ PROV852:0 ""
+ PROV853:0 ""
+ PROV854:0 ""
+ PROV855:0 ""
+ PROV856:0 ""
+ PROV857:0 ""
+ PROV858:0 ""
+ PROV859:0 ""
+ PROV860:0 ""
+ PROV861:0 ""
+ PROV862:0 ""
+ PROV863:0 ""
+ PROV864:0 ""
+ PROV865:0 ""
+ PROV866:0 ""
+ PROV867:0 ""
+ PROV868:0 ""
+ PROV869:0 ""
+ PROV870:0 ""
+ PROV871:0 ""
+ PROV872:0 ""
+ PROV873:0 ""
+ PROV874:0 ""
+ PROV875:0 ""
+ PROV876:0 "Cacumuds"
  PROV877:0 "Akimel"
  PROV878:0 "Kinyaa'aanii"
  PROV879:0 "Ndee"
