--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -1,18 +1,8 @@
 ﻿l_english:
  nordweg_estuary_modifier:0 "Nordweg Estuary"
- krswir_estuary_modifier:0 "Krswir Estuary"
- draconica_estuary_modifier:0 "Greater Draconica Estuary"
- veritium_estuary_modifier:0 "Veritium Estuary"
  bohium_estuary_modifier:0 "Bohium Estuary"
- soterium_estuary_modifier:0 "Magreina Estuary"
- lesser_draconica_estuary_modifier:0 "Lesser Draconica Estuary"
- intium_estuary_modifier:0 "Intium Estuary"
- grauen_estuary_modifier:0 "Grauen Estuary"
- eltyrium_estuary_modifier:0 "Eltyrium Estuary"
- feur_estuary_modifier:0 "Feur Estuary"
- polder_estuary_modifier:0 "Polder Estuary"
- hatrien_estuary_modifier:0 "Hatrien Estuary"
- korpikoski_estuary_modifier:0 "Nordweg Estuary"
- rinanakkain_estuary_modifier:0 "Nordweg Estuary"
- alnahrdhabi_estuary_modifier:0 "Nordweg Estuary"
- 
+ magreina_estuary_modifier:0 "Magreina Estuary"
+ korpikoski_estuary_modifier:0 "Korpikoski Estuary"
+ rinanakkain_estuary_modifier:0 "Rinanakkain Estuary" 
+ alnahrdhabi_estuary_modifier:0 "Alnahrdhabi Estuary" 
+ hre_imperial_road:0 "Imperial Road"
