--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -63,5 +63,5 @@
  middle_magreiner:0 "Middle Magreiner"
  upper_magreiner:0 "Upper Magreiner"
  nahtrucer:0 "Nähtrucer"
- salish:0 "Salish"
+ saelish:0 "Salish"
  ostemer:0 "Ostemer"
