--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -15,3 +15,7 @@
  1_USRA:0 "Usra"
  2_USRA:0 "Grand Usra"
  3_USRA:0 "Grand Usra"
+
+ marstonian_pirate_reform:0 "Marstonian Pirates"
+ marstonian_pirate_reform_desc:0 "Marstonian Pirates DESC"
+ mechanic_legitimacy_from_raids_yes:0 "Gain 0.5 Legitimacy for each Slave Raid"
