--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -15,7 +15,7 @@
  diavasa:0 "Diavasa"
  acerb:0 "Acerb"
  dhahabia:0 "Dhahabia"
- hamadan:0 "Hamadan"
+ hamidar:0 "Hamidar"
  sedica:0 "Sedica"
  western_liberathia:0 "Middle Patromnis"
  upper_liberathia:0 "Upper Patromnis"
