--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -65,8 +65,8 @@
  ALG_ADJ:0 "Algharbiyan"
  IFR:0 "Al-Ifrita"
  IFR_ADJ:0 "Ifritican"
- HAM:0 "Hamadan"
- HAM_ADJ:0 "Hamadani"
+ HAM:0 "Hamidar"
+ HAM_ADJ:0 "Hamidari"
  IGN:0 "Ignidunta"
  IGN_ADJ:0 "Ignidunter"
  NRB:0 "Narbone"
