--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -412,7 +412,7 @@
  PROV_ADJ411:0 "Mosulian"
  PROV_ADJ412:0 "Ahvazian"
  PROV_ADJ413:0 "Khorramabadi"
- PROV_ADJ414:0 "Hamadani"
+ PROV_ADJ414:0 "Hamidari"
  PROV_ADJ415:0 "Kirkukian"
  PROV_ADJ416:0 "Tabrizi"
  PROV_ADJ417:0 "Lahijani"
