--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,27 +1,27 @@
 ﻿l_english:
- PROV1:0 ""
- PROV2:0 ""
- PROV3:0 ""
- PROV4:0 ""
- PROV5:0 ""
- PROV6:0 ""
+ PROV1:0 "Prov1"
+ PROV2:0 "Prov2"
+ PROV3:0 "Prov3"
+ PROV4:0 "Prov4"
+ PROV5:0 "Prov5"
+ PROV6:0 "Prov6"
  PROV7:0 "Njuhccamavran Bay"
- PROV8:0 ""
+ PROV8:0 "Prov8"
  PROV9:0 "SEA 9"
- PROV10:0 ""
- PROV11:0 ""
- PROV12:0 ""
- PROV13:0 ""
- PROV14:0 ""
- PROV15:0 ""
- PROV16:0 ""
+ PROV10:0 "Prov10"
+ PROV11:0 "Prov11"
+ PROV12:0 "Prov12"
+ PROV13:0 "Prov13"
+ PROV14:0 "Prov14"
+ PROV15:0 "Prov15"
+ PROV16:0 "Prov16"
  PROV17:0 "Bay of Nifthem"
- PROV18:0 ""
+ PROV18:0 "Prov18"
  PROV19:0 "Togawian Strait"
- PROV20:0 ""
- PROV21:0 ""
- PROV22:0 ""
- PROV23:0 ""
+ PROV20:0 "Prov19"
+ PROV21:0 "Prov21"
+ PROV22:0 "Prov22"
+ PROV23:0 "Prov23"
  PROV24:0 "Pohjoisrantainen"
  PROV25:0 "Metsälammi"
  PROV26:0 "Ambrisatama"
@@ -46,8 +46,8 @@
  PROV45:0 "Havuranta"
  PROV46:0 "Rantahelmi"
  PROV47:0 "Rantaniitty"
- PROV48:0 ""
- PROV49:0 ""
+ PROV48:0 "Prov48"
+ PROV49:0 "Prov49"
  PROV50:0 "Ehrenic Straits"
  PROV51:0 "Kalliokylä"
  PROV52:0 "Karhukorpi"
@@ -69,20 +69,20 @@
  PROV68:0 "Refria"
  PROV69:0 "Ubarsha"
  PROV70:0 "Azalkaba"
- PROV71:0 ""
- PROV72:0 ""
- PROV73:0 ""
+ PROV71:0 "Prov71"
+ PROV72:0 "Prov72"
+ PROV73:0 "Prov73"
  PROV74:0 "Riyaduna"
  PROV75:0 "Rizqal"
  PROV76:0 "Qafqumir"
  PROV77:0 "AFRICAAFRICA"
  PROV78:0 "Marjanid"
  PROV79:0 "Dahrayyam"
- PROV80:0 ""
- PROV81:0 ""
- PROV82:0 ""
- PROV83:0 ""
- PROV84:0 ""
+ PROV80:0 "Prov80"
+ PROV81:0 "Prov81"
+ PROV82:0 "Prov82"
+ PROV83:0 "Prov83"
+ PROV84:0 "Prov84"
  PROV85:0 "Ghaybarin"
  PROV86:0 "Boujloudiya"
  PROV87:0 "Tafsiraq"
@@ -90,29 +90,29 @@
  PROV89:0 "South Al-Bahriyah"
  PROV90:0 "Zaynashar"
  PROV91:0 "Abdahisn"
- PROV92:0 ""
+ PROV92:0 "Prov92"
  PROV93:0 "Salian Sea"
  PROV94:0 "Ninlilatu"
  PROV95:0 "Sijjazur"
  PROV96:0 "Sedican Coast"
- PROV97:0 ""
+ PROV97:0 "Prov97"
  PROV98:0 "Dhofarqil"
  PROV99:0 "Aswanqalb"
  PROV100:0 "Qudsala"
- PROV101:0 ""
- PROV102:0 ""
- PROV103:0 ""
- PROV104:0 ""
- PROV105:0 ""
- PROV106:0 ""
- PROV107:0 ""
- PROV108:0 ""
+ PROV101:0 "Prov101"
+ PROV102:0 "Prov102"
+ PROV103:0 "Prov103"
+ PROV104:0 "Prov104"
+ PROV105:0 "Prov105"
+ PROV106:0 "Prov106"
+ PROV107:0 "Prov107"
+ PROV108:0 "Prov108"
  PROV109:0 "Wyrmegnac"
- PROV110:0 ""
+ PROV110:0 "Prov109"
  PROV111:0 "Geoberic Bay" 
- PROV112:0 ""
- PROV113:0 ""
- PROV114:0 ""
+ PROV112:0 "Prov110"
+ PROV113:0 "Prov111"
+ PROV114:0 "Prov112"
  PROV115:0 "Northern Niheyabdan Sea"
  PROV116:0 "Vallacielo"
  PROV117:0 "Lentisca"
@@ -125,16 +125,16 @@
  PROV124:0 "Colibrínido"
  PROV125:0 "Harba Minor"
  PROV126:0 "Elena Cape"
- PROV127:0 ""
- PROV128:0 ""
+ PROV127:0 "Tyronal"
+ PROV128:0 "Hadasta"
  PROV129:0 "Tummic Lakes"
- PROV130:0 ""
- PROV131:0 ""
- PROV132:0 "Hamadan"
- PROV133:0 ""
- PROV134:0 ""
- PROV135:0 ""
- PROV136:0 ""
+ PROV130:0 "Al-Abyad"
+ PROV131:0 "Khaymar"
+ PROV132:0 "Hamidar"
+ PROV133:0 "Tazzemor"
+ PROV134:0 "Alsteh"
+ PROV135:0 "Largiz"
+ PROV136:0 "Elfizar"
  PROV137:0 "Seliana"
  PROV138:0 "Montevefrdi"
  PROV139:0 "Navarecipa"
@@ -166,11 +166,11 @@
  PROV165:0 ""
  PROV166:0 ""
  PROV167:0 "Paraconna"
- PROV168:0 ""
+ PROV168:0 "Variza"
  PROV169:0 ""
  PROV170:0 ""
  PROV171:0 ""
- PROV172:0 ""
+ PROV172:0 "Altawrian Coast"
  PROV173:0 "Almazamal"
  PROV174:0 "Águilarroyo"
  PROV175:0 "Fahmhafra"
@@ -183,7 +183,7 @@
  PROV182:0 "Ecolunte"
  PROV183:0 "Caladida"
  PROV184:0 "Esecerro"
- PROV185:0 ""
+ PROV185:0 "Shamalian Sea"
  PROV186:0 "Riovolare"
  PROV187:0 "Bosalva"
  PROV188:0 "Adonuepadre"
@@ -200,7 +200,7 @@
  PROV199:0 "Altaqadim"
  PROV200:0 "Huzamjar"
  PROV201:0 "Al-Wadihajara"
- PROV202:0 "Hamadani Bay"
+ PROV202:0 "Hamidari Bay"
  PROV203:0 "Alghamdhah"
  PROV204:0 "Alshawahid"
  PROV205:0 "Alzamzam"
@@ -300,7 +300,7 @@
  PROV299:0 ""
  PROV300:0 ""
  PROV301:0 ""
- PROV302:0 ""
+ PROV302:0 "Merkatiman Sea"
  PROV303:0 ""
  PROV304:0 ""
  PROV305:0 ""
@@ -310,7 +310,7 @@
  PROV309:0 ""
  PROV310:0 ""
  PROV311:0 ""
- PROV312:0 ""
+ PROV312:0 "New Argenian Coast"
  PROV313:0 ""
  PROV314:0 ""
  PROV315:0 ""
@@ -331,7 +331,7 @@
  PROV330:0 ""
  PROV331:0 ""
  PROV332:0 ""
- PROV333:0 ""
+ PROV333:0 "Furmarian Sea"
  PROV334:0 ""
  PROV335:0 ""
  PROV336:0 ""
@@ -339,10 +339,10 @@
  PROV338:0 ""
  PROV339:0 ""
  PROV340:0 ""
- PROV341:0 ""
+ PROV341:0 "Uzkolian Coast"
  PROV342:0 ""
  PROV343:0 ""
- PROV344:0 ""
+ PROV344:0 "Riyadunic Coast"
  PROV345:0 ""
  PROV346:0 ""
  PROV347:0 "Sea of Laima"
@@ -416,7 +416,7 @@
  PROV415:0 "South Harban Coast"
  PROV416:0 ""
  PROV417:0 ""
- PROV418:0 ""
+ PROV418:0 "Coraniro"
  PROV419:0 ""
  PROV420:0 ""
  PROV421:0 ""
@@ -425,11 +425,11 @@
  PROV424:0 ""
  PROV425:0 ""
  PROV426:0 "South Cabiran Coast"
- PROV427:0 ""
- PROV428:0 ""
- PROV429:0 ""
- PROV430:0 ""
- PROV431:0 ""
+ PROV427:0 "Northern Antawili Coast"
+ PROV428:0 "Albasatian Sea"
+ PROV429:0 "Paduano"
+ PROV430:0 "Viacheli"
+ PROV431:0 "Tiepol"
  PROV432:0 ""
  PROV433:0 ""
  PROV434:0 ""
@@ -440,7 +440,7 @@
  PROV439:0 ""
  PROV440:0 ""
  PROV441:0 ""
- PROV442:0 ""
+ PROV442:0 "Matliman"
  PROV443:0 ""
  PROV444:0 ""
  PROV445:0 ""
@@ -458,7 +458,7 @@
  PROV457:0 ""
  PROV458:0 ""
  PROV459:0 ""
- PROV460:0 ""
+ PROV460:0 "Envase Fan"
  PROV461:0 ""
  PROV462:0 ""
  PROV463:0 ""
@@ -481,7 +481,7 @@
  PROV480:0 ""
  PROV481:0 ""
  PROV482:0 ""
- PROV483:0 ""
+ PROV483:0 "Diavasan Bay"
  PROV484:0 ""
  PROV485:0 ""
  PROV486:0 ""
@@ -577,7 +577,7 @@
  PROV576:0 "Rolasta"
  PROV577:0 "Jižní pevnost"
  PROV578:0 "Velký les"
- PROV579:0 ""
+ PROV579:0 "Sea579"
  PROV580:0 "Arodend"
  PROV581:0 "Eneradech"
  PROV582:0 "Wessburg"
@@ -586,31 +586,31 @@
  PROV585:0 "Raruth"
  PROV586:0 "Wolledorf"
  PROV587:0 "Oddelean Range"
- PROV588:0 ""
+ PROV588:0 "Sea588"
  PROV589:0 "Oddelende"
  PROV590:0 "Oddelpass"
  PROV591:0 "Oddelean Range"
- PROV592:0 ""
- PROV593:0 ""
- PROV594:0 ""
- PROV595:0 ""
- PROV596:0 ""
- PROV597:0 ""
- PROV598:0 ""
- PROV599:0 ""
- PROV600:0 ""
- PROV601:0 ""
- PROV602:0 ""
- PROV603:0 ""
- PROV604:0 ""
- PROV605:0 ""
- PROV606:0 ""
- PROV607:0 ""
- PROV608:0 ""
- PROV609:0 ""
- PROV610:0 ""
- PROV611:0 ""
- PROV612:0 ""
+ PROV592:0 "Tendun"
+ PROV593:0 "Angelsei"
+ PROV594:0 "Auheim"
+ PROV595:0 "Hescerport"
+ PROV596:0 "Entaustadt"
+ PROV597:0 "Dovenrei"
+ PROV598:0 "Sea598"
+ PROV599:0 "Sea599"
+ PROV600:0 "Vetican Bay"
+ PROV601:0 "Sterist"
+ PROV602:0 "Auchender"
+ PROV603:0 "Klerung"
+ PROV604:0 "Chalian Coast"
+ PROV605:0 "Unerwald"
+ PROV606:0 "Seiderin"
+ PROV607:0 "Gebes"
+ PROV608:0 "Moranmund"
+ PROV609:0 "Echsbach"
+ PROV610:0 "Hettingen"
+ PROV611:0 "Neuhaus"
+ PROV612:0 "Brigwald"
  PROV613:0 "Cacumuds"
  PROV614:0 "Cacumuds"
  PROV615:0 "Hapie"
@@ -627,7 +627,7 @@
  PROV626:0 "Diechtung"
  PROV627:0 "Kupfthal"
  PROV628:0 "Kohlheim"
- PROV629:0 ""
+ PROV629:0 "Southern Ghrub Sea"
  PROV630:0 "Undenach"
  PROV631:0 "Schoraupitz"
  PROV632:0 "Dunden"
@@ -638,18 +638,18 @@
  PROV637:0 "Rotzwasch"
  PROV638:0 "Schlaufberg"
  PROV639:0 "Ausigen"
- PROV640:0 ""
+ PROV640:0 "Ghrub Sea"
  PROV641:0 "Besigenhof"
  PROV642:0 "Hegenstadt"
  PROV643:0 "Altefeld"
  PROV644:0 "Neusatz"
  PROV645:0 "Cacumuds"
- PROV646:0 ""
- PROV647:0 ""
- PROV648:0 ""
- PROV649:0 ""
- PROV650:0 ""
- PROV651:0 ""
+ PROV646:0 "Verun"
+ PROV647:0 "Trauflin"
+ PROV648:0 "Bryloch"
+ PROV649:0 "Lywernde"
+ PROV650:0 "Aberdon"
+ PROV651:0 "Granitz"
  PROV652:0 "Ausein"
  PROV653:0 "Ereihen"
  PROV654:0 "Kuhficker"
@@ -658,7 +658,7 @@
  PROV657:0 "Altfort"
  PROV658:0 "Keltburg"
  PROV659:0 "Aqerbic Plateau"
- PROV660:0 ""
+ PROV660:0 "Coast of Urmadin"
  PROV661:0 "Himmelnberg"
  PROV662:0 "Bay of Antawil"
  PROV663:0 "Eisenburg"
@@ -731,15 +731,15 @@
  PROV730:0 ""
  PROV731:0 ""
  PROV732:0 ""
- PROV733:0 ""
- PROV734:0 ""
+ PROV733:0 "Coast of Ciehralagan"
+ PROV734:0 "Indriger Sea"
  PROV735:0 ""
  PROV736:0 ""
  PROV737:0 ""
  PROV738:0 ""
  PROV739:0 ""
  PROV740:0 ""
- PROV741:0 ""
+ PROV741:0 "Outer Indriger Sea"
  PROV742:0 ""
  PROV743:0 ""
  PROV744:0 ""
@@ -815,11 +815,11 @@
  PROV814:0 ""
  PROV815:0 ""
  PROV816:0 ""
- PROV817:0 ""
+ PROV817:0 "Eastern Indriger Sea"
  PROV818:0 ""
  PROV819:0 ""
  PROV820:0 ""
- PROV821:0 ""
+ PROV821:0 "Coast of Venaklulle"
  PROV822:0 ""
  PROV823:0 ""
  PROV824:0 ""
@@ -875,250 +875,250 @@
  PROV874:0 ""
  PROV875:0 ""
  PROV876:0 "Cacumuds"
- PROV877:0 "Akimel"
- PROV878:0 "Kinyaa'aanii"
- PROV879:0 "Ndee"
- PROV880:0 "Ohkay Owingeh"
- PROV881:0 "Tsiahahéndé"
- PROV882:0 "Mashgaléndé"
- PROV883:0 "Tche Sha"
- PROV884:0 "Auia"
- PROV885:0 "Gulgahén"
- PROV886:0 "Waco"
- PROV887:0 "Tickanwa'tic"
- PROV888:0 "Atakapa"
- PROV889:0 "Nawunena"
- PROV890:0 "Tokinahyup"
- PROV891:0 "Naisha"
- PROV892:0 "Kitkit'ish"
- PROV893:0 "Chitimacha"
- PROV894:0 "Kadohadacho"
- PROV895:0 "Anilco"
- PROV896:0 "Yscani"
- PROV897:0 "Casqui"
- PROV898:0 "Kanza"
- PROV899:0 "Pahatsi"
- PROV900:0 "Tamaroa"
- PROV901:0 "Tsawi"
- PROV902:0 "Niuachi"
- PROV903:0 "Omaha"
- PROV904:0 "Wahpetunwan"
- PROV905:0 "Baxoje"
- PROV906:0 "Ithanktunwanna"
- PROV907:0 "Ithanktunwan"
- PROV908:0 "Sisithunwan"
- PROV909:0 "Nueta"
- PROV910:0 "Makoua"
- PROV911:0 "Baawitigon"
- PROV912:0 "Osaakiiwaki"
- PROV913:0 "Meskwaki"
- PROV914:0 "Ho-Chunk"
- PROV915:0 "Peewareewa"
- PROV916:0 "Kaskankaham"
- PROV917:0 "Cahokia"
- PROV918:0 "Chucalissa"
- PROV919:0 "Chickasha"
- PROV920:0 "Chahta"
- PROV921:0 "Ishenoca"
- PROV922:0 "Tohome"
- PROV923:0 "Pensacola"
- PROV924:0 "Tawasa"
- PROV925:0 "Coweta"
- PROV926:0 "Ais"
- PROV927:0 "Timucua"
- PROV928:0 "Apalachee"
- PROV929:0 "Guale"
- PROV930:0 "Kasihta"
- PROV931:0 "Coosa"
- PROV932:0 "Issati"
- PROV933:0 "Iswa"
- PROV934:0 "Tsoyaha"
- PROV935:0 "Chiaha"
- PROV936:0 "Joara"
- PROV937:0 "Skarureh"
- PROV938:0 "Pomouik"
- PROV939:0 "Kaskinampo"
- PROV940:0 "Kentahke"
- PROV941:0 "Ouasioto"
- PROV942:0 "Waayaahtanwa"
- PROV943:0 "Atchakangouen"
- PROV944:0 "Bodewadmik"
- PROV945:0 "Michigami"
- PROV946:0 "Hotaawathipi"
- PROV947:0 "Kentaientonga"
- PROV948:0 "Ohiyo"
- PROV949:0 "Monacan"
- PROV950:0 "Chesapeake"
- PROV951:0 "Kanawha"
- PROV952:0 "Powhatan"
- PROV953:0 "Piscataway"
- PROV954:0 "Erielhonan"
- PROV955:0 "Conestoga"
- PROV956:0 "Sakimauchheening"
- PROV957:0 "Wicontiss"
- PROV958:0 "Onodowaga"
- PROV959:0 "Gayogohono"
- PROV960:0 "Onondagaono"
- PROV961:0 "Onyo'taaka"
- PROV962:0 "Unami"
- PROV963:0 "Machkantowoon"
- PROV964:0 "Kanien'kehaka"
- PROV965:0 "Manahahttan"
- PROV966:0 "Nipmuc"
- PROV967:0 "Narraganset"
- PROV968:0 "Massachusett"
- PROV969:0 "Mahican"
- PROV970:0 "Amoskeag"
- PROV971:0 "Penapawsket"
- PROV972:0 "Nuu-chah-nulth"
- PROV973:0 "Skwxwu'mesh"
- PROV974:0 "Kwakwaka'wakw"
- PROV975:0 "Tsimshian"
- PROV976:0 "Tlingit"
- PROV977:0 "Yakutat"
- PROV978:0 "Kenai"
- PROV979:0 "Unangan"
- PROV980:0 "Beothuk"
- PROV981:0 "Taqamkuk"
- PROV982:0 "Onamagag"
- PROV983:0 "Epagoitgnag"
- PROV984:0 "Segepenegatic"
- PROV985:0 "Petkootkweak"
- PROV986:0 "Gespegeogag"
- PROV987:0 "Onguhiara"
- PROV988:0 "Attignawantan"
- PROV989:0 "Attigneenongnahac"
- PROV990:0 "Maisouna"
- PROV991:0 "Odishkwaagamiig"
- PROV992:0 "Weskarini"
- PROV993:0 "Osheaga"
- PROV994:0 "Stadacona"
- PROV995:0 "Toutouskak"
- PROV996:0 "Oumamiwek"
- PROV997:0 "Chisedec"
- PROV998:0 "Qikirmiut"
- PROV999:0 "Cisasipi"
- PROV1000:0 "Iyiyiw"
- PROV1001:0 "Marameg"
- PROV1002:0 "Abitibi"
- PROV1003:0 "Mosoni"
- PROV1004:0 "Attawapiskat"
- PROV1005:0 "Mushkegowuk"
- PROV1006:0 "Ahiarmiut"
- PROV1007:0 "Gojijiwininiwag"
- PROV1008:0 "Wiinibig"
- PROV1009:0 "Atikaki"
- PROV1010:0 "Manitowapow"
- PROV1011:0 "Kinougeoulini"
- PROV1012:0 "Satsuma"
- PROV1013:0 "Cheongju"
- PROV1014:0 "Bungo"
- PROV1015:0 "Okinawa"
- PROV1016:0 "Ha Tinh"
- PROV1017:0 "Suo"
- PROV1018:0 "Izumo"
- PROV1019:0 "Harima"
- PROV1020:0 "Kyoto"
- PROV1021:0 "Settsu"
- PROV1022:0 "Indrapura"
- PROV1023:0 "Echizen"
- PROV1024:0 "Echigo"
- PROV1025:0 "Uzen"
- PROV1026:0 "Rikuzen"
- PROV1027:0 "Hitachi"
- PROV1028:0 "Musashi"
+ PROV877:0 ""
+ PROV878:0 ""
+ PROV879:0 ""
+ PROV880:0 ""
+ PROV881:0 ""
+ PROV882:0 ""
+ PROV883:0 ""
+ PROV884:0 ""
+ PROV885:0 ""
+ PROV886:0 ""
+ PROV887:0 ""
+ PROV888:0 ""
+ PROV889:0 ""
+ PROV890:0 ""
+ PROV891:0 ""
+ PROV892:0 ""
+ PROV893:0 ""
+ PROV894:0 ""
+ PROV895:0 ""
+ PROV896:0 ""
+ PROV897:0 ""
+ PROV898:0 ""
+ PROV899:0 ""
+ PROV900:0 ""
+ PROV901:0 ""
+ PROV902:0 ""
+ PROV903:0 ""
+ PROV904:0 ""
+ PROV905:0 ""
+ PROV906:0 ""
+ PROV907:0 ""
+ PROV908:0 ""
+ PROV909:0 ""
+ PROV910:0 ""
+ PROV911:0 ""
+ PROV912:0 ""
+ PROV913:0 ""
+ PROV914:0 ""
+ PROV915:0 ""
+ PROV916:0 ""
+ PROV917:0 ""
+ PROV918:0 ""
+ PROV919:0 ""
+ PROV920:0 ""
+ PROV921:0 ""
+ PROV922:0 ""
+ PROV923:0 ""
+ PROV924:0 ""
+ PROV925:0 ""
+ PROV926:0 ""
+ PROV927:0 ""
+ PROV928:0 ""
+ PROV929:0 ""
+ PROV930:0 ""
+ PROV931:0 ""
+ PROV932:0 ""
+ PROV933:0 ""
+ PROV934:0 ""
+ PROV935:0 "Capiranella"
+ PROV936:0 ""
+ PROV937:0 ""
+ PROV938:0 ""
+ PROV939:0 ""
+ PROV940:0 ""
+ PROV941:0 ""
+ PROV942:0 ""
+ PROV943:0 ""
+ PROV944:0 ""
+ PROV945:0 ""
+ PROV946:0 ""
+ PROV947:0 ""
+ PROV948:0 ""
+ PROV949:0 ""
+ PROV950:0 ""
+ PROV951:0 ""
+ PROV952:0 ""
+ PROV953:0 ""
+ PROV954:0 ""
+ PROV955:0 ""
+ PROV956:0 ""
+ PROV957:0 ""
+ PROV958:0 ""
+ PROV959:0 ""
+ PROV960:0 ""
+ PROV961:0 ""
+ PROV962:0 ""
+ PROV963:0 ""
+ PROV964:0 ""
+ PROV965:0 ""
+ PROV966:0 ""
+ PROV967:0 ""
+ PROV968:0 ""
+ PROV969:0 ""
+ PROV970:0 ""
+ PROV971:0 ""
+ PROV972:0 ""
+ PROV973:0 ""
+ PROV974:0 ""
+ PROV975:0 ""
+ PROV976:0 ""
+ PROV977:0 "Balsahra Oasis"
+ PROV978:0 ""
+ PROV979:0 ""
+ PROV980:0 ""
+ PROV981:0 ""
+ PROV982:0 ""
+ PROV983:0 ""
+ PROV984:0 ""
+ PROV985:0 ""
+ PROV986:0 ""
+ PROV987:0 ""
+ PROV988:0 ""
+ PROV989:0 ""
+ PROV990:0 ""
+ PROV991:0 ""
+ PROV992:0 "Keihalaskan Bay"
+ PROV993:0 ""
+ PROV994:0 ""
+ PROV995:0 ""
+ PROV996:0 ""
+ PROV997:0 ""
+ PROV998:0 ""
+ PROV999:0 ""
+ PROV1000:0 ""
+ PROV1001:0 ""
+ PROV1002:0 ""
+ PROV1003:0 ""
+ PROV1004:0 ""
+ PROV1005:0 ""
+ PROV1006:0 ""
+ PROV1007:0 ""
+ PROV1008:0 ""
+ PROV1009:0 ""
+ PROV1010:0 ""
+ PROV1011:0 ""
+ PROV1012:0 ""
+ PROV1013:0 "Blue Sea"
+ PROV1014:0 ""
+ PROV1015:0 ""
+ PROV1016:0 ""
+ PROV1017:0 ""
+ PROV1018:0 ""
+ PROV1019:0 ""
+ PROV1020:0 ""
+ PROV1021:0 ""
+ PROV1022:0 ""
+ PROV1023:0 ""
+ PROV1024:0 ""
+ PROV1025:0 ""
+ PROV1026:0 ""
+ PROV1027:0 ""
+ PROV1028:0 ""
  PROV1029:0 "Arctic Sea"
- PROV1030:0 "Owari"
- PROV1031:0 "Kamikawa"
- PROV1032:0 "The Kurils"
- PROV1033:0 "Enchiw"
- PROV1034:0 "Kamchatka"
- PROV1035:0 "Penzhina"
- PROV1036:0 "Kolyma"
- PROV1037:0 "Omolon"
- PROV1038:0 "Karalveyem"
- PROV1039:0 "Verkhoyansk"
- PROV1040:0 "Suntar Khayata"
- PROV1041:0 "Gizhiga"
- PROV1042:0 "Sakha"
- PROV1043:0 "Okhotsk"
- PROV1044:0 "Tauisk"
- PROV1045:0 "Yakut"
- PROV1046:0 "Maya"
- PROV1047:0 "Jugjur"
- PROV1048:0 "Miyoo Gasan"
- PROV1049:0 "Haiilanboo"
- PROV1050:0 "Tyr"
- PROV1051:0 "Aldan"
- PROV1052:0 "Stanovoy"
- PROV1053:0 "Hinggan"
- PROV1054:0 "Mukhtuya"
- PROV1055:0 "Kirenga"
- PROV1056:0 "Barguzin"
- PROV1057:0 "Ude"
- PROV1058:0 "Onan Gol"
- PROV1059:0 "East Tunguska"
- PROV1060:0 "Irkutsk"
- PROV1061:0 "West Tunguska"
- PROV1062:0 "Angara"
- PROV1063:0 "Sayan"
- PROV1064:0 "Tomsk"
- PROV1065:0 "Kuznetsk"
- PROV1066:0 "Altai Uriankhai"
- PROV1067:0 "Turukhan"
- PROV1068:0 "Ket"
- PROV1069:0 "Surgut"
- PROV1070:0 "Narim"
- PROV1071:0 "Irtesh"
- PROV1072:0 "Obdorsk"
- PROV1073:0 "Berezov"
- PROV1074:0 "Sibir"
- PROV1075:0 "Tyumen"
- PROV1076:0 "Kurgan"
- PROV1077:0 "Solikamsk"
- PROV1078:0 "Tura"
- PROV1079:0 "Viatka"
- PROV1080:0 "Pelym"
- PROV1081:0 "Simbirsk"
- PROV1082:0 "Kazan"
- PROV1083:0 "Vetluga"
- PROV1084:0 "Wadjuk"
- PROV1085:0 "Paredarerme"
- PROV1086:0 "Kaurna"
- PROV1087:0 "Wurundjeri"
- PROV1088:0 "Wergaia"
- PROV1089:0 "Wiradjuri"
- PROV1090:0 "Eora"
- PROV1091:0 "Kamilaroi"
- PROV1092:0 "Gubbi-Gubbi"
- PROV1093:0 "Yagalingu"
- PROV1094:0 "Turrbal"
- PROV1095:0 "Falklands"
- PROV1096:0 "Cape Verde"
- PROV1097:0 "Fernando Po"
- PROV1098:0 "St. Helena"
- PROV1099:0 "Socotra"
- PROV1100:0 "Mahe"
- PROV1101:0 "Hollhavai"
- PROV1102:0 "Mauritius"
- PROV1103:0 "Île Bourbon"
- PROV1104:0 "Eiriksfjord"
- PROV1105:0 "Vestbygden"
- PROV1106:0 "Te Tai Tokerau"
- PROV1107:0 "Taranaki"
- PROV1108:0 "Te Moana a Toi"
- PROV1109:0 "Timaru"
- PROV1110:0 "Agadir"
- PROV1111:0 "Arguin"
- PROV1112:0 "Trarza"
- PROV1113:0 "Cayor"
- PROV1114:0 "Gabu"
- PROV1115:0 "Brakna"
- PROV1116:0 "Wolof"
- PROV1117:0 "Futa Jallon"
- PROV1118:0 "Sierra Leone"
- PROV1119:0 "Grain Coast"
- PROV1120:0 "Bambuk"
+ PROV1030:0 ""
+ PROV1031:0 ""
+ PROV1032:0 ""
+ PROV1033:0 ""
+ PROV1034:0 ""
+ PROV1035:0 ""
+ PROV1036:0 ""
+ PROV1037:0 ""
+ PROV1038:0 ""
+ PROV1039:0 ""
+ PROV1040:0 ""
+ PROV1041:0 ""
+ PROV1042:0 ""
+ PROV1043:0 ""
+ PROV1044:0 ""
+ PROV1045:0 ""
+ PROV1046:0 ""
+ PROV1047:0 ""
+ PROV1048:0 ""
+ PROV1049:0 ""
+ PROV1050:0 ""
+ PROV1051:0 ""
+ PROV1052:0 ""
+ PROV1053:0 ""
+ PROV1054:0 ""
+ PROV1055:0 ""
+ PROV1056:0 ""
+ PROV1057:0 ""
+ PROV1058:0 ""
+ PROV1059:0 "Sayaanud Oasis"
+ PROV1060:0 ""
+ PROV1061:0 ""
+ PROV1062:0 ""
+ PROV1063:0 ""
+ PROV1064:0 ""
+ PROV1065:0 ""
+ PROV1066:0 ""
+ PROV1067:0 ""
+ PROV1068:0 ""
+ PROV1069:0 ""
+ PROV1070:0 ""
+ PROV1071:0 ""
+ PROV1072:0 ""
+ PROV1073:0 ""
+ PROV1074:0 ""
+ PROV1075:0 ""
+ PROV1076:0 ""
+ PROV1077:0 ""
+ PROV1078:0 ""
+ PROV1079:0 ""
+ PROV1080:0 ""
+ PROV1081:0 ""
+ PROV1082:0 ""
+ PROV1083:0 ""
+ PROV1084:0 ""
+ PROV1085:0 ""
+ PROV1086:0 ""
+ PROV1087:0 ""
+ PROV1088:0 ""
+ PROV1089:0 ""
+ PROV1090:0 ""
+ PROV1091:0 ""
+ PROV1092:0 ""
+ PROV1093:0 ""
+ PROV1094:0 ""
+ PROV1095:0 ""
+ PROV1096:0 ""
+ PROV1097:0 ""
+ PROV1098:0 ""
+ PROV1099:0 ""
+ PROV1100:0 ""
+ PROV1101:0 ""
+ PROV1102:0 ""
+ PROV1103:0 ""
+ PROV1104:0 ""
+ PROV1105:0 ""
+ PROV1106:0 ""
+ PROV1107:0 ""
+ PROV1108:0 ""
+ PROV1109:0 ""
+ PROV1110:0 ""
+ PROV1111:0 ""
+ PROV1112:0 ""
+ PROV1113:0 ""
+ PROV1114:0 ""
+ PROV1115:0 ""
+ PROV1116:0 ""
+ PROV1117:0 ""
+ PROV1118:0 ""
+ PROV1119:0 ""
+ PROV1120:0 ""
  PROV1121:0 "Bure"
  PROV1122:0 "Bagoe"
  PROV1123:0 "Segu"
@@ -1995,10 +1995,10 @@
  PROV1994:0 "Wake"
  PROV1995:0 "Micronesia"
  PROV1996:0 "Palau"
- PROV1997:0 "Midway"
- PROV1998:0 "Christmas Island"
- PROV1999:0 "Cocos Island"
- PROV2000:0 "Qinghai Lake"
+ PROV1997:0 "
+ PROV1998:0 ""
+ PROV1999:0 ""
+ PROV2000:0 ""
  test_province_name:0 "Test Province Name"
  other_province_name:0 "Other Province Name"
  rand_prov_straits_of:0 "Straits of $prov$"
