--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -1206,7 +1206,7 @@
  INTEGRATETOOLOWDESC:0 "You need at least §Y+190§! relations with a country to integrate them."
  APH_NOT_CAPITAL:1 "$COUNTRY$ can not add their capital to the Empire, they need to join the Empire first."
  APH_NOT_OWNED_CONTROLLED:0 "You can only add provinces you own and control to the empire."
- ADD_TO_HRE_TOOLTIP:1 "Adding §Y$NAME$§! to the HoSaelian Empireill give it the protection of the emperor."
+ ADD_TO_HRE_TOOLTIP:1 "Adding §Y$NAME$§! to the HoSaelian Empirel give it the protection of the emperor."
  ADD_TO_HRE_TOOLTIP_CAPITAL:0 "By adding our capital to the empire, we will also get the following benefits:"
  APH_IS_SUBJECT:0 "Subjects can't add their provinces to the Empire."
  APH_IS_PART_OF_TRADE_COMPANY:0 "$NAME$ is in a Trade Company, and can thus not become a part of the Saelian Empire."
@@ -1217,7 +1217,7 @@
  APH_NOT_CORE:0 "$NAME$ needs to be a $WHO$ core province before it can join the Saelian Empire."
  APH_TOO_LARGE:1 "$COUNTRY$ is simply too large to join the Empire."
  APH_NOT_RELATION:1 "$COUNTRY$'s relation with $EMPEROR$ is not good enough. It needs to be at §Y$NEED$§! but is currently only §R$CURR$§!."
- REMOVE_FROM_HRE_TOOLTIP:0 "Removing §Y$NAME$§! from the HoSaelian Empireill reduce the imperial authority, and greatly upset the emperor!"
+ REMOVE_FROM_HRE_TOOLTIP:0 "Removing §Y$NAME$§! from the HoSaelian Empirel reduce the imperial authority, and greatly upset the emperor!"
  RPH_NOT_OWNED_CONTROLLED:0 "You can only remove provinces you own and control from the empire."
  RPH_NOT_PART_OF_HRE:0 "$NAME$ is not a part of the Saelian Empire."
  RPH_NOT_CORE:0 "$NAME$ has to be a $ADJ$ core to allow it to be removed from the Saelian Empire."
