--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,4 +1,16 @@
 ﻿l_english:
+
+ 
+ NAT:0 "Natives"
+ NAT_ADJ:0 "Native"
+ PIR:0 "Pirates"
+ PIR_ADJ:0 "Piratic"
+ SYN:0 "Combine"
+ SYN:0 "Combine"
+ REB:0 "Rebels"
+ REB_ADJ:0 "Rebel Alliance"
+
+ 
  EHR:0 "Ehrenstaat"
  EHR_ADJ:0 "Ehren"
  ZAN:0 "Zandigehaven"
@@ -81,6 +93,10 @@
  HAR_ADJ:0 "Harban"
  ROU:0 "Rouvia"
  ROU_ADJ:0 "Rouvian"
+ VAR:0 "Variza"
+ VAR_ADJ:0 "Varizan"
+ COT:0 "Contraforts"
+ COT_ADJ:0 "Contrafortian"
 
  DAG:0 "Dagica"
  DAG_ADJ:0 "Dagican"
@@ -255,9 +271,6 @@
  ANS:0 "Ansgarland"
  ANS_ADJ:0 "Ansgarlander"
 
- PIC:0 "Piccoporta"
- PIC_ADJ:0 "Piccoportian"
-
  BOH:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
  NEV:0 "Nevledi"
@@ -354,6 +367,16 @@
  ZON_ADJ:0 "Zonachian"
  COR:0 "Coraniro"
  COR_ADJ:0 "Coraniran"
+ PIC:0 "Piccoporta"
+ PIC_ADJ:0 "Piccoportian"
+ MAZ:0 "Mazzardia"
+ MAZ_ADJ:0 "Mazzardian"
+ ERR:0 "Errtesa"
+ ERR_ADJ:0 "Errtesan"
+ ACC:0 "Accarierto"
+ ACC_ADJ:0 "Accariertan"
+ TIA:0 "Tiarene"
+ TIA_ADJ:0 "Tiarene"
 
 
  ANT:0 "Antawil"
