--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1995,7 +1995,7 @@
  PROV1994:0 "Wake"
  PROV1995:0 "Micronesia"
  PROV1996:0 "Palau"
- PROV1997:0 "
+ PROV1997:0 ""
  PROV1998:0 ""
  PROV1999:0 ""
  PROV2000:0 ""
