--- a/localisation/emperor_content_l_english.yml
+++ b/localisation/emperor_content_l_english.yml
@@ -105,7 +105,7 @@
  king_in_prussia.2.c:0 "We will not recognize this self-appointed monarch."
  king_in_prussia.3.t:0 "The King in Prussia"
  king_in_prussia.3.d:0 "Our close friend and ally, the Emperor [emperor.Monarch.GetName], has graciously decided to elevate Prussia to the rank of Imperial Kingdom! Such a privilege has not been granted since the rise of the Kings of Bohemia. The Kings of Prussia shall wear their crown with pride, always remembering the favor granted to them by the Emperor."
- king_in_prussia.3.d2:0 "Imperial tradition dictates that the only Kings in the Empire should be the King of the Romans, that being the Emperor himself, and the King of Bohemia. We have however reached an intriguing legal compromise with the Emperor: our monarchs shall use the title of ‘King in Prussia’. As Prussia lies outside the bounds of the HolySaelian Empire can name ourselves Kings without any need for the Emperor to break Imperial traditions."
+ king_in_prussia.3.d2:0 "Imperial tradition dictates that the only Kings in the Empire should be the King of the Romans, that being the Emperor himself, and the King of Bohemia. We have however reached an intriguing legal compromise with the Emperor: our monarchs shall use the title of ‘King in Prussia’. As Prussia lies outside the bounds of the Saelian Empire can name ourselves Kings without any need for the Emperor to break Imperial traditions."
  king_in_prussia.3.d3:0 "The Emperor, that honorless cur, has refused to acknowledge our right to call ourselves Kings no matter what reasonable compromises we proposed. We shall pay him no heed of course, and title ourselves as Kings regardless."
  king_in_prussia.3.a:0 "Thank God and the Emperor!"
  king_in_prussia.3.b:0 "A satisfying compromise."
@@ -193,13 +193,13 @@
  pope_in_hre_triggered_modifier:0 "The Pope in the Empire"
  desc_pope_in_hre_triggered_modifier:0 "The Pope's membership in the Saelian Empire has dire ramifications for Catholics outside of the Empire."
  incident_pope.1.t:0 "A Holy Empire?"
- incident_pope.1.d:0 "Italy, no longer the ‘Shadow Kingdom’, has been returned into the fold of the HolySaelian Empireough the relentless efforts of the Emperor. The Papal State must now choose whether to accept the hegemony of the Emperor or be condemned to sit naked and vulnerable on its doorstep.\n\nTo accept the authority of the Emperor would have dire ramifications for the Catholic world. While Catholics in the Empire might have their faith emboldened through the legitimacy conferred by Papal membership, those outside of the Empire are unlikely to take kindly to such a decision and may turn to heresy."
+ incident_pope.1.d:0 "Italy, no longer the ‘Shadow Kingdom’, has been returned into the fold of the Saelian Empireough the relentless efforts of the Emperor. The Papal State must now choose whether to accept the hegemony of the Emperor or be condemned to sit naked and vulnerable on its doorstep.\n\nTo accept the authority of the Emperor would have dire ramifications for the Catholic world. While Catholics in the Empire might have their faith emboldened through the legitimacy conferred by Papal membership, those outside of the Empire are unlikely to take kindly to such a decision and may turn to heresy."
  incident_pope.1.a:0 "We will join the Empire."
  incident_pope.1.b:0 "The Holy See must remain independent."
  pope_incident_tt:0 "The Emperor will decide whether to accept the Papal States into the Saelian Empire.\n§YThis will have ramifications for the entire Catholic world.§!"
  pope_incident_tt2:1 "§YThis will have ramifications for the entire Catholic world.§!\n§YCatholics outside of the Empire will receive Prestige penalties.§!"
  incident_pope.2.t:0 "A Holy Empire?"
- incident_pope.2.d:0 "Italy, no longer the ‘Shadow Kingdom’, has been returned into the fold of the HolySaelian Empireough the relentless efforts of the Emperor. The Pope of Rome has chosen to accept the hegemony of the Empire rather than to be condemned to sit naked and vulnerable on its doorstep.\n\nAllowing the Pope to become an Imperial Prince would have dire ramifications for the Catholic world. While Catholics in the Empire might have their faith emboldened through the legitimacy conferred by Papal membership, those outside of the Empire are unlikely to take kindly to such a decision and may turn to heresy."
+ incident_pope.2.d:0 "Italy, no longer the ‘Shadow Kingdom’, has been returned into the fold of the Saelian Empireough the relentless efforts of the Emperor. The Pope of Rome has chosen to accept the hegemony of the Empire rather than to be condemned to sit naked and vulnerable on its doorstep.\n\nAllowing the Pope to become an Imperial Prince would have dire ramifications for the Catholic world. While Catholics in the Empire might have their faith emboldened through the legitimacy conferred by Papal membership, those outside of the Empire are unlikely to take kindly to such a decision and may turn to heresy."
  incident_pope.2.a:0 "The Pope will join the Empire"
  incident_pope.2.b:0 "The Holy See should remain independent."
  incident_pope.3.t:0 "An Unholy Empire"
@@ -1788,7 +1788,7 @@
  flavor_efr.EVTOPTA1:0 "Present our offer to the Emperor."
  flavor_efr.EVTOPTB1:0 "I bow to no Emperor."
  flavor_efr.EVTNAME2:0 "East Frisia Offers to Join the Empire"
- flavor_efr.EVTDESC2:0 "An envoy from the leader of the peasants in East Frisia has arrived asking [Root.Monarch.GetTitle] [Root.Monarch.GetName] to support [EFR.Monarch.GetName]’s claim to the County of East Frisia. In return for our support, [Root.Monarch.GetSheHe] has offered to kneel before the Emperor as a Prince of the HoSaelian Empiren\nOfficially, the county of East Frisia is held by [dutch_east_frisia_claimant.Monarch.GetName] of Holland. The HoSaelian Empireas made no official stance on the matter, and a single word from the Emperor could bring an end to this conflict."
+ flavor_efr.EVTDESC2:0 "An envoy from the leader of the peasants in East Frisia has arrived asking [Root.Monarch.GetTitle] [Root.Monarch.GetName] to support [EFR.Monarch.GetName]’s claim to the County of East Frisia. In return for our support, [Root.Monarch.GetSheHe] has offered to kneel before the Emperor as a Prince of the Saelian Empiren\nOfficially, the county of East Frisia is held by [dutch_east_frisia_claimant.Monarch.GetName] of Holland. The Saelian Empireas made no official stance on the matter, and a single word from the Emperor could bring an end to this conflict."
  flavor_efr.EVTOPTA2:0 "Welcome to the Empire."
  flavor_efr.EVTOPTB2:0 "Support the [dutch_east_frisia_claimant.GetAdjective] claim to East Frisia."
  flavor_efr.EVTNAME3:0 "East Frisia and the Empire"
@@ -1808,12 +1808,12 @@
  bur_france_gets_france_tt:0 "§YEvery Province§! in the §YFrance Region§! owned by §YBurgundy§! will be ceded to §Y[FRA.GetName]§!."
  release_imperial_tt:1 "§YEvery Province§! in the HRE owned by §YBurgundy§! will be §Yreleased§! as §YPrinces of the HRE§!."
  demand_lowlands_tt:0 "Demand that the §YLowlands§! be released as §YPrinces of the HRE§!."
- east_frisia_empire_tt:0 "§YEast Frisia§! will become a part of the HoSaelian EmpireThe type of Government changes to §YMonarchy§!."
+ east_frisia_empire_tt:0 "§YEast Frisia§! will become a part of the Saelian EmpireThe type of Government changes to §YMonarchy§!."
  become_helvetic_tt:0 "§YSwitzerland§! will become a §YRevolutionary Republic§!."
  genevan_province_tt:0 "§YGeneva§! will ask for control of all §YSavoyard§! provinces of §YSwiss culture§!."
- westphalia_peace_trigger_tt:0 "Either §YReligious Peace§! is achieved in the Empire, or the §YLeague War§! has happened and §Y[Root.Religion.GetName]§! is the official religion of the Holy RSaelian Empire
+ westphalia_peace_trigger_tt:0 "Either §YReligious Peace§! is achieved in the Empire, or the §YLeague War§! has happened and §Y[Root.Religion.GetName]§! is the official religion of the Saelian Empire"
  westphalia_peace_reward1_tt:1 "If §YReligious Peace§! is achieved or the Empire has been dismantled:"
- westphalia_peace_reward2_tt:0 "If §Y[Root.Religion.GetName]§! is the official religion of the HoSaelian Empire
+ westphalia_peace_reward2_tt:0 "If §Y[Root.Religion.GetName]§! is the official religion of the Saelian Empire"
  legislative_sejm:0 "Legislative Sejm"
  legislative_sejm_desc:0 "By granting more legislative powers to the Sejm, we ensure that only the best candidates from within our nation are selected to be in line for the throne."
  integrated_sejmiks:0 "Integrate the Sejmiks"
@@ -1884,7 +1884,7 @@
  incidents_bur_inheritance.0.a:0 "The House [Root.Monarch.Dynasty.GetName] has a bright future with Marie."
  incidents_bur_inheritance.0.b:0 "My father was right. No woman can rule [Root.GetName]."
  incidents_bur_inheritance.1.t:0 "The Burgundian Succession"
- incidents_bur_inheritance.1.desc:1 "It is as we had always feared, the Duke of [Root.GetName] has passed from this life to the heavens without producing an eligible male heir. With the Duke’s untimely demise, [Root.Monarch.GetName] [Root.Monarch.Dynasty.GetName] has ascended as the [Root.Monarch.GetTitle] of Burgundy. However, with [Root.Monarch.GetHerHis] claim relatively weak in the eyes of many noble lords and ladies, Burgundy is seen as ripe for the taking by the ambitious [FRA.Monarch.GetTitle] of [FRA.GetName] and [Emperor.Monarch.GetTitle] of the HoSaelian Empiren\n[Root.Monarch.GetName] is a brave and intelligent young woman but if Burgundy is to survive this crisis without falling into conflict with one of the major powers, then [Root.Monarch.GetName] must marry into a prestigious royal family to seek their support and protection. Of course, [Root.Monarch.GetName] will be wed in a traditional patrilineal marriage so Burgundy will essentially be subject to a foreign nation, but in this time of great chaos, what choice do we have?"
+ incidents_bur_inheritance.1.desc:1 "It is as we had always feared, the Duke of [Root.GetName] has passed from this life to the heavens without producing an eligible male heir. With the Duke’s untimely demise, [Root.Monarch.GetName] [Root.Monarch.Dynasty.GetName] has ascended as the [Root.Monarch.GetTitle] of Burgundy. However, with [Root.Monarch.GetHerHis] claim relatively weak in the eyes of many noble lords and ladies, Burgundy is seen as ripe for the taking by the ambitious [FRA.Monarch.GetTitle] of [FRA.GetName] and [Emperor.Monarch.GetTitle] of the Saelian Empiren\n[Root.Monarch.GetName] is a brave and intelligent young woman but if Burgundy is to survive this crisis without falling into conflict with one of the major powers, then [Root.Monarch.GetName] must marry into a prestigious royal family to seek their support and protection. Of course, [Root.Monarch.GetName] will be wed in a traditional patrilineal marriage so Burgundy will essentially be subject to a foreign nation, but in this time of great chaos, what choice do we have?"
  incidents_bur_inheritance.1.a:0 "Come what may, Burgundy shall remain Burgundian."
  incidents_bur_inheritance.1.b:0 "The French aren't here to stop us anymore."
  incidents_bur_inheritance.1.c:0 "The [Emperor.Monarch.Dynasty.GetName] Prince will do nicely."
@@ -1900,7 +1900,7 @@
  incidents_bur_inheritance.102.a:0 "We do not bow to this “[Emperor.Monarch.GetTitle]”."
  incidents_bur_inheritance.102.b:0 "Grant the Great Privilege."
  incidents_bur_inheritance.102.c:0 "Abandon the Lowlands."
- incidents_bur_inheritance.102.c.tt:0 "Every subject of §Y[BUR.GetName]§! which has their capital in the §YLow Countries§! becomes independent and will join the HolySaelian Empire
+ incidents_bur_inheritance.102.c.tt:0 "Every subject of §Y[BUR.GetName]§! which has their capital in the §YLow Countries§! becomes independent and will join the Saelian Empire"
  incidents_bur_inheritance.103.t:0 "Burgundy Inherited!"
  incidents_bur_inheritance.103.d.fra:1 "The Dukes of Burgundy have always been a thorn in the side of House [Root.Monarch.Dynasty.GetName] of France, but with the death of the final male in the Burgundian line, Marie de Bourgogne has offered to reintegrate with France. This decision means that the rebellious Burgundian duchy is a thing of the past and our rule over France is secure, although the [Emperor.Monarch.GetTitle] of the Saelian Empire may grow agitated over our control of the Lowlands."
  incidents_bur_inheritance.103.d.emp:1 "With the death of the Duke of Burgundy, our close royal ties to the Burgundians have come into great fruition. Many Burgundian territories exist within the Empire, and Marie de Bourgogne has decided to fully integrate with the Empire by offering to wed a [Root.Monarch.Dynasty.GetName] Prince! The French are expecting we return the Burgundian lands that were once held by the French throne, but we of course could deny their claims and keep Burgundy as an integral part of the Empire."
@@ -1921,7 +1921,7 @@
  incidents_bur_inheritance.3.b:0 "Press our claim on Burgundy."
  incidents_bur_inheritance.3.c:0 "Abandon the claims."
  incidents_bur_inheritance.301.t:0 "The Emperor Demands the Low Countries"
- incidents_bur_inheritance.301.d:0 "When we inherited Burgundy, we also became sovereign over Burgundy’s territories in the lowlands. These territories are traditionally part of the HoSaelian Empireand unsurprisingly, our inheritance has provoked [Emperor.GetName] to demand the territories from us. We could refuse, of course, but the [Emperor.Monarch.GetTitle] has made it clear that this is a demand, and failing to meet it will give [Emperor.Monarch.GetHerHim] cause to draw the sword of the Empire."
+ incidents_bur_inheritance.301.d:0 "When we inherited Burgundy, we also became sovereign over Burgundy’s territories in the lowlands. These territories are traditionally part of the Saelian Empireand unsurprisingly, our inheritance has provoked [Emperor.GetName] to demand the territories from us. We could refuse, of course, but the [Emperor.Monarch.GetTitle] has made it clear that this is a demand, and failing to meet it will give [Emperor.Monarch.GetHerHim] cause to draw the sword of the Empire."
  incidents_bur_inheritance.301.a:0 "All of Burgundy is ours!"
  incidents_bur_inheritance.301.b:0 "A reasonable request."
  incidents_bur_inheritance.302.t:0 "The Emperor Demands Burgundy"
@@ -2618,7 +2618,7 @@
  RVA_from_ashes:0 "From the Ashes"
  RVA_from_ashes_desc:0 "The old city was destroyed completely by a fiery work of God, cleansing the old city of its impiety and sin. The wise Emperor Frederick Barbarossa had the town rebuilt from its ashes and made the city the capital of the empire for two glorious years. Our good and pious city was gifted with a church, a marketplace, and eventually its own brewery in a matter of a few short years. Truly none can rise from the ashes like Dortmund."
  RVA_meeting_of_bishops_and_emperors:0 "Meeting Place of Bishops and Emperors"
- RVA_meeting_of_bishops_and_emperors_desc:0 "Before the great fire that laid waste to the old city of Dortmund, the city was known as “Throtmanni” and was the meeting place for both the Imperial Diet of the HolySaelian Empired the Ecclesiastical Council. Matters of both a religious and imperial manner were discussed here in Dortmund, and even today we find ourselves as a governmental center for Imperial politics in the North."
+ RVA_meeting_of_bishops_and_emperors_desc:0 "Before the great fire that laid waste to the old city of Dortmund, the city was known as “Throtmanni” and was the meeting place for both the Imperial Diet of the Saelian Empired the Ecclesiastical Council. Matters of both a religious and imperial manner were discussed here in Dortmund, and even today we find ourselves as a governmental center for Imperial politics in the North."
  RVA_chief_city:0 "Chief City of the Rhine"
  RVA_chief_city_desc:0 "Even while our glorious city was being rebuilt, we became known as the “chief city” of the Rhine, Westphalia, and the Lowlands, making us essentially the capital of three imperial administrative regions. Being such a powerful and central power in the Empire will surely bring riches to our great city!"
  RVA_emperors_favor:0 "The Emperor's Favorite"
@@ -2794,7 +2794,7 @@
  HRZ_ottoman_accommodation:0 "Accommodation with the Ottoman Turks"
  HRZ_ottoman_accommodation_desc:0 "While many other nations resist the growing power of the Ottoman Turks, many nobles in Herzegovina flock to the Turks for support in overthrowing the tyrannical regime in Bosnia. Perhaps by embracing the rise of the Ottomans, we may be able to manipulate their nobility and armies into fighting for our cause and advancing our interests in the Balkans."
  HRZ_herceg:0 "Herceg"
- HRZ_herceg_desc:0 "When we declared our independence from the Kingdom of Bosnia, we were neither a King nor a Duke. Our wise leader Stjepan adopted the title “Herceg”, a title borrowed from the HolySaelian Empire, the secular title for the Duchy of Saint Sava came to be Herzegovina, the lands belonging to the Herceg. With our national identity tied to our brilliant leader, we shall remain united in our absolute devotion to the wise rulers of our nation as they guide us down the path to victory and prosperity."
+ HRZ_herceg_desc:0 "When we declared our independence from the Kingdom of Bosnia, we were neither a King nor a Duke. Our wise leader Stjepan adopted the title “Herceg”, a title borrowed from the Saelian Empire, the secular title for the Duchy of Saint Sava came to be Herzegovina, the lands belonging to the Herceg. With our national identity tied to our brilliant leader, we shall remain united in our absolute devotion to the wise rulers of our nation as they guide us down the path to victory and prosperity."
  HRZ_shifting_allegiances:0 "Shifting Allegiances"
  HRZ_shifting_allegiances_desc:0 "Our Herceg has bent the knee to Spaniards, Turks, Bosnians, and Serbians. We understand that the winds of change and fortune favor those with a silver tongue and flexible foreign policy. We have never been a great empire or kingdom, but we have continued to protect our interests both as an independent nation and subject of foreign powers through our flexible diplomacy and fierce negotiation tactics. By keeping our ears open to new diplomatic opportunities, we shall continue to protect our interests in the inconstant landscape of Mediterranean politics."
  custom_positive_piety:0 "Devotion to Legalism"
