--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -10,6 +10,8 @@
  REB:0 "Rebels"
  REB_ADJ:0 "Rebel Alliance"
 
+ PAP:0 "The Episcopate"
+ PAP_ADJ:0 "Liemarian"
  
  EHR:0 "Ehrenstaat"
  EHR_ADJ:0 "Ehren"
