--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -847,7 +847,7 @@
  bureaucratic_despotism_ruler:0 "Councilor"
  theocratic_government_ruler:0 "Archbishop"
  monastic_order_government_ruler:0 "Grandmaster"
- papal_government_ruler:0 "Pope"
+ papal_government_ruler:0 "Episcopus Maximus"
  tribal_despotism_ruler:0 "Chief"
  tribal_kingdom_ruler:0 "King"
  tribal_federation_ruler:0 "High Chief"
@@ -892,7 +892,7 @@
  bureaucratic_despotism:0 "Bureaucratic Despotism"
  theocratic_government:0 "Theocracy"
  monastic_order_government:0 "Monastic Order"
- papal_government:0 "Papacy"
+ papal_government:0 "Episcopatus Maximus"
  tribal_despotism:0 "Tribal Despotism"
  tribal_kingdom:0 "Tribal Monarchy"
  peasants_republic:0 "Peasants Republic"
@@ -2369,8 +2369,8 @@
  MAX_CONDOTTIERI_MERC:0 "This value would be furthered modified by any Modifiers to §YAvailable Mercenaries§!."
  CONNECT_TO_SHIP_PENDING_CONDOTTIERI:0 "You cannot attach a unit to a ship when you have offered to rent it out as Condottieri."
  CONNECT_TO_SHIP_CONDOTTIERI:0 "Condottieri can only be attached to ships belonging to the country that is paying for them, and only if the whole unit can fit onto the ship."
- IS_POPE:0 "They are the Papal States."
- IS_PAPAL_CONTROLLER:0 "The ruler of $NAME$ is Papal Controller."
+ IS_POPE:0 "They are the Episcopatus Maximus."
+ IS_PAPAL_CONTROLLER:0 "The Current Episcopus Maximus is from $NAME$."
  BUILDINGSLEDGER_BUILDINGS_TEMPLE_S:0 "Temples"
  BUILDINGSLEDGER_BUILDINGS_TEMPLE_L:0 "For each province you have with a temple in it, you get a reduction in the cost for raising stability. Provinces with a temple have a green tick."
  BUILDINGSLEDGER_BUILDINGS_WORKSHOP_S:0 "Workshops"
@@ -3699,7 +3699,7 @@
  M_LEDGER_BUTTON:0 "Ledger"
  M_MENU_BUTTON:0 "Menu"
  M_HRE_BUTTON:0 "Saelian Empire"
- M_VATICAN_BUTTON:0 "Papacy"
+ M_VATICAN_BUTTON:0 "Episcopatus Maximus"
  M_HOME_BUTTON:0 "Go to Capital Province"
  PTI:0 "Permanent Terra Incognita"
  ONLY_HOST_SPEED:0 "Only the host can change the game speed."
@@ -4849,13 +4849,13 @@
  EXCOM_WRONG_RELIGION:0 "We can only excommunicate Catholics."
  EXCOM_NOT_READY:0 "We cannot excommunicate rulers left and right! We must wait, at least until "
  EXCOMMUNICATED:0 "Excommunicated"
- EXCOMMUNICATED_DESC:0 "The Pope has seen fit to excommunicate this ruler. Neighboring Catholic countries can declare war without incurring the normal stability hits."
+ EXCOMMUNICATED_DESC:0 "The Episcopus Maximus has seen fit to excommunicate this ruler. Neighboring Catholic countries can declare war without incurring the normal stability hits."
  IS_EXCOMMUNICATED:0 "Is excommunicated "
  IS_NOT_EXCOMMUNICATED:0 "Is not excommunicated "
- CRUSADE:0 "Crusade"
- CRUSADE_DESC:0 "Catholics all over the world are encouraged to attack §Y$NAME$§W in the name of Our Lord! The Crusade will last until $DATE$ or until the Infidel has been destroyed."
- ALREADY_CRUSADING:0 "The Pope has already launched a Crusade. We must wait for it to end before calling another."
- CRUSADE_SAME_RELIGION:0 "While tempting, we cannot launch a Crusade against fellow Christians, heretics or not."
+ CRUSADE:0 "Bellum Sanctum"
+ CRUSADE_DESC:0 "Liemarians all over the world are encouraged to attack §Y$NAME$§W in the name of Our Lord! The Crusade will last until $DATE$ or until the Infidel has been destroyed."
+ ALREADY_CRUSADING:0 "The Episcopus Maximus has already launched a Bellum Sanctum. We must wait for it to end before calling another."
+ CRUSADE_SAME_RELIGION:0 "While tempting, we cannot launch a Bellum Sanctum against fellow Saelian, heretics or not."
  BOGOMILIST:0 "Bogomilist"
  WALDENSIAN:0 "Waldensian"
  FRATICELLI:0 "Fraticelli"
@@ -5159,7 +5159,7 @@
  destabilize_rival_title:0 "Destabilize $COUNTRY$"
  destabilize_rival_desc:0 "$COUNTRY$ is becoming a dangerous rival, let us unleash our spies to destabilize their government. If they have lower stability we will have more room to maneuver,"
  EXCOM_NOT_DEFENDER:0 "We cannot excommunicate the Defender of the Faith."
- EXCOM_NOT_PAPACY:0 "We cannot have the Pope himself excommunicated."
+ EXCOM_NOT_PAPACY:0 "We cannot have the Episcopus Maximus himself excommunicated."
  HAVE_LESS_LAND_FORCELIMIT:0 "Have a land force limit of less than"
  HAVE_MORE_LAND_FORCELIMIT:0 "Have a land force limit of at least"
  HAVE_LESS_NAVAL_FORCELIMIT:0 "Have a Naval Force Limit of less than"
@@ -7129,10 +7129,10 @@
  INVESTED_PAPAL_INF_LESS_THAN:0 "Invested Papal Influence less than"
  INVESTED_PAPAL_INF_AT_LEAST:0 "Invested Papal Influence at least"
  ADD_PAPAL_INFLUENCE:0 "$DIRECTION$ $VALUE$ Papal Influence"
- PAPACY_IS_ENABLED:0 "The Papacy is active"
- PAPACY_IS_DISABLED:0 "The Papacy is NOT active"
- ENABLE_PAPACY:0 "Enable the Papacy"
- DISABLE_PAPACY:0 "Disable the Papacy"
+ PAPACY_IS_ENABLED:0 "The the Episcopate is active"
+ PAPACY_IS_DISABLED:0 "The the Episcopate is NOT active"
+ ENABLE_PAPACY:0 "Enable the the Episcopate"
+ DISABLE_PAPACY:0 "Disable the the Episcopate"
  gods_kingdom_title:0 "Declare the Kingdom of God"
  gods_kingdom_desc:0 "With the lands of Northern Italy under the temporal power of the Holy Father rather than any Emperor or King it is now justified to declare this state the Kingdom of God on Earth."
  kingdom_of_god:0 "The Kingdom of God"
