--- a/localisation/TD_subject_types_l_english.yml
+++ b/localisation/TD_subject_types_l_english.yml
@@ -5,6 +5,10 @@
  trade_dependency_title:0 "Trade Dependency"
  trade_dependency_title_plural:0 "Trade Dependencies"
  is_trade_dependency:0 "Is Trade Dependency"
+ cancel_trade_dependency_title:0 "Cancel Trade Dependency"
+ cancel_trade_dependency_tooltip:0 "End our agreement with [From.GetName]"
+ cancel_trade_dependency_desc:0 ""
+ trade_dependency_abandoned:0 "They abandoned us"
  integrate_into_government_title:0 "Strengthen control"
  integrate_into_government_tooltip:0 "Turn our Trade Dependency into a proper vassal state"
  SUBJECT_20_YEARS:0 "has been our subject for at least 10 years" 
